--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -1,10 +1,14 @@
 <mat-form-field>
-  <input matInput placeholder="Login" [value]="name">
+  <input matInput placeholder="Login" [(ngModel)]="name">
 </mat-form-field>
 <br>
 <mat-form-field>
-  <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'" [value]="password">
+  <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'" [(ngModel)]="password">
   <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
   </button>
 </mat-form-field>
+<br>
+<button mat-flat-button color="primary" (click)="login()">Login</button>
+
+<button mat-flat-button color="primary" (click)="request()">request</button>
