--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-toolbar></app-toolbar>
-<app-login></app-login>
-<app-book-table></app-book-table>
+<!--<app-login></app-login>-->
+<div id="main-table-wrapper">
+  <app-book-table></app-book-table>
+</div>
+
