--- a/front/src/app/components/book-table/book-table.component.html
+++ b/front/src/app/components/book-table/book-table.component.html
@@ -7,38 +7,40 @@
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      <td mat-cell *matCellDef="let row" (click)="openPopup(row)"> {{row.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="year">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Year </th>
-      <td mat-cell *matCellDef="let row"> {{row.year}} </td>
+      <td mat-cell *matCellDef="let row" (click)="openPopup(row)"> {{row.year}} </td>
     </ng-container>
 
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-      <td mat-cell *matCellDef="let row"> {{row.price}} </td>
+      <td mat-cell *matCellDef="let row" (click)="openPopup(row)"> {{row.price}} </td>
     </ng-container>
 
     <ng-container matColumnDef="buttons">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>  </th>
       <td mat-cell *matCellDef="let row">
-        <button mat-icon-button color="primary" (click)="addToCart(row)">
-          <mat-icon>shopping_cart</mat-icon>
-        </button>
+        <div>
+          <button mat-icon-button color="primary" (click)="addToCart(row)">
+            <mat-icon>shopping_cart</mat-icon>
+          </button>
 
-        <button mat-icon-button color="primary">
-          <mat-icon>edit</mat-icon>
-        </button>
+          <button mat-icon-button color="primary" (click)="editBook(row)">
+            <mat-icon>edit</mat-icon>
+          </button>
 
-        <button mat-icon-button color="primary" (click)="deleteBook(row)">
-          <mat-icon>delete</mat-icon>
-        </button>
+          <button mat-icon-button color="primary" (click)="deleteBook(row)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="{{row.year < 1990 ? 'red-border' : ''}}">
     </tr>
   </table>
 
