--- a/front/src/app/components/toolbar/toolbar.component.html
+++ b/front/src/app/components/toolbar/toolbar.component.html
@@ -2,7 +2,12 @@
   <mat-toolbar-row>
     <span>Bookshop</span>
     <span class="example-spacer"></span>
-    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
-    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>
+<!--    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>-->
+<!--    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>-->
+    <button mat-fab id="cart">
+      <mat-icon>shopping_cart</mat-icon>
+    </button>
   </mat-toolbar-row>
 </mat-toolbar>
+
+
