work-in-process

--- a/front/src/app/components/book-edit/book-edit.component.html
+++ b/front/src/app/components/book-edit/book-edit.component.html
@@ -1,18 +1,18 @@
 <div class="example-container">
   <mat-form-field>
-    <input matInput placeholder="name" [(ngModel)]="data.name">
+    <input matInput placeholder="name" [(ngModel)]="editBook.name">
   </mat-form-field>
   <br>
   <mat-form-field>
-    <input matInput placeholder="year" [(ngModel)]="data.year">
+    <input matInput placeholder="year" [(ngModel)]="editBook.year">
   </mat-form-field>
   <br>
   <mat-form-field>
-    <textarea  matInput placeholder="description" [(ngModel)]="data.description"></textarea>
+    <textarea  matInput placeholder="description" [(ngModel)]="editBook.description"></textarea>
   </mat-form-field>
   <br>
   <mat-form-field>
-    <input matInput placeholder="price" [(ngModel)]="data.price">
+    <input matInput placeholder="price" [(ngModel)]="editBook.price">
   </mat-form-field>
 </div>
 
