--- a/front/src/app/components/confirmation-popup/confirmation-popup.component.html
+++ b/front/src/app/components/confirmation-popup/confirmation-popup.component.html
@@ -1,3 +1,6 @@
 <h3>Are you sure?</h3>
-<button mat-flat-button color="primary" (click)="confirm()">Yes</button>
-<button mat-flat-button color="warn" (click)="decline()">No</button>
+<div>
+  <button mat-flat-button color="primary" (click)="confirm()">Yes</button>
+  <button mat-flat-button color="warn" (click)="decline()">No</button>
+</div>
+
