--- a/front/src/app/components/toolbar/toolbar.component.html
+++ b/front/src/app/components/toolbar/toolbar.component.html
@@ -4,8 +4,11 @@
     <span class="example-spacer"></span>
 <!--    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>-->
 <!--    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>-->
-    <button mat-fab id="cart" (click)="openCart()">
+    <button mat-fab class="fabs" (click)="openCart()">
       <mat-icon>shopping_cart</mat-icon>
+    </button>
+    <button mat-fab class="fabs" (click)="showLoginForm()">
+      Login
     </button>
   </mat-toolbar-row>
 </mat-toolbar>
