--- a/front/src/app/components/toolbar/toolbar.component.html
+++ b/front/src/app/components/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
     <button mat-fab class="fabs" (click)="openCart()">
       <mat-icon>shopping_cart</mat-icon>
     </button>
-    <button mat-fab class="fabs" (click)="showLoginForm()">
+    <button mat-fab class="fabs" (click)="showLoginForm()" *ngIf="!this.tokenStorage.isLoggedIn()">
       Login
     </button>
   </mat-toolbar-row>
